# remote_dashboard

./: README.md  protocol.lyx
common/: commands.h  protocol.h  trace.h  udpProtocol.h  values.h
embedded/: CMakeLists.txt
embedded/inc/: acq_eth_protocol.h  acq_eth_udp.h  cmd.h  udp.h  value_exported.h
embedded/src/: acq_eth_protocol.c  cmd.c  main.c  udp.c  value_exported.c
python/: test.py  udp.kdev4  udp.py
remote_ctrl/: acq_eth.h  board.cpp  board.h  boardvalue.cpp  boardvalue.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  proto.cpp  proto.h  remote_ctrl.pro
wireshark/: disector.lua
